# data-dependence-analysis-tool

./: CMakeLists.txt  README.md
script/: format.sh
src/: CMakeLists.txt  common.cpp  common.h  data_dependence_analysis.cpp  data_dependence_analysis.h  data_dependence_graph.cpp  data_dependence_graph.h  main.cpp  node.cpp  node.h  utils.cpp  utils.h
test/: 01Loop.cpp  run.sh
